--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,1 @@
-{
-    "printWidth": 68,
-    "proseWrap": "always",
-    "overrides": [ {
-      "files": "notes/**/*",
-      "options": { "parser": "markdown" }
-    }
-  ]
-}
+palace/.prettierrc
